<resources>
    <string name="app_name">DLS-dev</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="about_you">Чем занимается ваша компания?</string>
    <string name="about_you_hint">Например: продажа недвижимости</string>
    <string name="empty_about_you">Расскажите о себе, пожалуйста</string>
    <string name="target_audience">Ваша целевая аудитория?</string>
    <string name="target_audience_hint">Например: люди среднего возраста</string>
    <string name="application_creation_reason">Каких результатов вы хотите добиться с помощью данного приложения?</string>
    <string name="application_creation_reason_hint">Например: развитие</string>
    <string name="empty_target_audience">Расскажите о своей аудитории, пожалуйста</string>
    <string name="empty_application_creation_reason">Расскажите о своих целях, пожалуйста</string>
    <string name="platforms">Какие платформы вам необходимы?</string>
    <string name="functions">Какой базовый функционал нужен вашему приложению?</string>
    <string name="paid_content">В приложении будет платный контент</string>
    <string name="pushNotif">PUSH уведомления</string>
    <string name="location">Карты или определение местоположение пользователя</string>
    <string name="camera">Работа с камерой телефона</string>
    <string name="pass">Регистрация / Авторизация пользователя по паролю</string>
    <string name="social">Регистрация / Авторизация пользователя через соцсети</string>
    <string name="control_system">Необходимо создать систему управления приложением</string>
    <string name="web_api">Web API</string>
    <string name="noWebApi">Не нужен</string>
    <string name="fromYouWebApi">Необходима разработка с вашей стороны</string>
    <string name="fromMeWebApi">Мы разработаем/разработали своими силами</string>
    <string name="garant">Нам необходимо техническое обслуживание после гарантийного</string>
    <string name="tex">Техническая поддержка и поддержка обновлений</string>
    <string name="contact_info">Контактная информация</string>
    <string name="number_phone_hint">Телефон</string>
    <string name="email_phone_hint">E-mail</string>
    <string name="site_phone_hint">Web-сайт компании</string>
    <string name="contact_face">Контактное лицо</string>
    <string name="days">Количество дней равно:</string>
    <string name="price">Цена:</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_about_us">Мы профессионально занимаемся разработкой мобильных приложений для основных сред и платформ: iOS, Android, Web.</string>
    <string name="multi_platform_project_title">MULTI-PLATFORM ПРОЕКТЫ</string>
    <string name="multi_platform_project_description">Реализуем проекты для всех популярных платформ, с богатым функционалом и гибкой системой администрирования. Все ваши данные между сайтами и приложениями будут синхронизированы вовремя.\n\nВ своей работе мы применяем самые современные и прогрессивные технологии дизайна и программирования.\n\nМы молодая команда профессионалов в области IT-технологий. Всегда открыты к новым идеям, продуктивному общению и ориентированы на достижение высоких результатов.</string>
    <string name="prototype_title">ПРОТОТИПИРОВАНИЕ</string>
    <string name="prototype_description">Разрабатываем прототипы приложений опираясь на последние лучшие существующие решения в данной области.</string>
    <string name="design_title">ДИЗАЙН</string>
    <string name="design_description">В основе нашего дизайна заложены: высокий профессионализм, стиль, вкус и результаты последних наработок в области UI/UX.</string>
    <string name="dev_title">РАЗРАБОТКА</string>
    <string name="dev_description">В разработке проектов мы применяем самые прогрессивные технологии для клиентской и серверной разработки.</string>
    <string name="testing_title">ТЕСТИРОВАНИЕ</string>
    <string name="testing_description">После процесса разработки мы переходим к отстраненному тестированию и выявлению возможных ошибок программы.</string>
    <string name="tex_title">ПОДДЕРЖКА</string>
    <string name="tex_description">Обеспечиваем техническую и информационную поддержку ваших проектов в процессе их функционального развития.</string>
    <string name="marceting_title">МАРКЕТИНГ</string>
    <string name="marceting_description">Предлагаем самые эффективные инструменты для продвижения приложений в контексте, мобильных сторах и социальных сетях.</string>
    <string name="other_description">Мы считаем пора начинать!\nВедь без сомнения, все мы знаем наверняка, что собственное приложение в GooglePlay и AppStore - это круто! И это классный и мощный маркетинговый инструмент. Пора начинать тестировать этот канал продаж!\n\nСоздаем красивые интерфейсы:\nВ проектировании и дизайне интерфейсов мы опираемся на самые передовые UI/UX концепции.\n\nВсе гениальное просто!\nПри проектировании интерфейсов мы придерживаемся гармоничных пропорций простоты, изящности и лаконичности.\n\nНичего лишнего.\nСтараемся не перегружать интерфейс излишним количеством элементов и выносить расширения в отдельные экраны.\n\nКак начать сотрудничество:\nДля того, чтобы начать разработку , требуется обсудить и согласовать основные детали Вашего проекта. После того, как дорожная карта проекта будет ясна - мы приступаем к реализации.\n\nНаши особенности:\nЛюбим делать лучшее в том, во что вовлечены. Выполняя каждый проект - мы выполняем его лучшим образом!\n\nАдаптивный дизайн:\nВ разработке проектов мы применяем технологии адаптивного дизайна - для мультиэкранности.\n\nЧистый и Четкий код:\n3 шага вперед - пишем код, 1 шаг назад - рефакторим. Пишем поддерживаемый и масштабируемый код.\n\nВыделенная поддержка:\nНа любом из этапов разработки наш клиент всегда может получить консультацию по IT бесплатно.\n\nДоступная стоимость:\nОплачивать разработку нам для вас будет выгоднее содержания штатных программистов и др. IT профи.\n\nСкорость работы:\nМы очень заинтересованы в запуске вашего проекта и реализуем все самым быстрым и лучим способом.\n\nИндивидуальный подход:\nМир уникален и неповторим, и все мы разные. К каждому клиенту у нас индивидуальный подход.\n\nНадежность компании:\nВы можете быть спокойны за выпуск вашего продукта! Мы так же заинтересованы в старте и популярности вашего проекта, поэтому всегда стараемся запускать проекты раньше согласованных сроков.</string>
</resources>
