<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.example.jdroidcoder.dls_dev.activities.CreateOrderActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_all"
            android:gravity="center"
            android:text="@string/contact_info"
            android:textColor="@android:color/black"
            android:textSize="@dimen/textSizeForCategory" />

        <EditText
            android:id="@+id/phoneEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/number_phone_hint"
            android:inputType="phone" />

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_phone_hint"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/siteEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/site_phone_hint"
            android:inputType="text" />

        <EditText
            android:id="@+id/faceEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contact_face"
            android:inputType="textPersonName" />


    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@drawable/ic_send_black_24dp" />

</android.support.design.widget.CoordinatorLayout>